fix: Refactor beans, HTS and ERC are already present from evm 30, delete unneeded bean combinantions
Signed-off-by: Kristiyan Selveliev <kristiyan.selveliev@limechain.tech>