@@ -43,8 +43,7 @@ class MirrorNodeEvmPropertiesTest extends Web3IntegrationTest {
     private static final String EVM_VERSION_34 = EVM_VERSION;
     private static final String EVM_VERSION_30 = "v0.30";
     private static final String EVM_VERSION_38 = "v0.38";
-    private static final String ERC = "ERC";
-    private static final String HTS = "HTS";
+    private static final String HTS_ERC = "HTS,ERC";
     private static final String EXCHANGE_RATE = "exchangeRate";
     private static final String PRNG = "PRNG";
     private static final int MAX_REFUND_PERCENT = 100;
@@ -99,16 +98,14 @@ class MirrorNodeEvmPropertiesTest extends Web3IntegrationTest {
 
         // given
         TreeMap<String, Long> systemPrecompiles = new TreeMap<>();
-        systemPrecompiles.put(HTS, 800L);
-        systemPrecompiles.put(ERC, 2100L);
-        systemPrecompiles.put(EXCHANGE_RATE, 3100L);
-        systemPrecompiles.put(PRNG, 4100L);
+        systemPrecompiles.put(EXCHANGE_RATE, 1100L);
+        systemPrecompiles.put(PRNG, 1200L);
 
         Map<String, Set<String>> evmPrecompiles = new HashMap<>();
 
-        evmPrecompiles.put(EVM_VERSION_30, Set.of(HTS));
-        evmPrecompiles.put(EVM_VERSION_34, Set.of(HTS, ERC));
-        evmPrecompiles.put(EVM_VERSION_38, Set.of(HTS, ERC, EXCHANGE_RATE, PRNG));
+        evmPrecompiles.put(EVM_VERSION_30, Set.of(EXCHANGE_RATE, PRNG));
+        evmPrecompiles.put(EVM_VERSION_34, Set.of(EXCHANGE_RATE, PRNG));
+        evmPrecompiles.put(EVM_VERSION_38, Set.of(EXCHANGE_RATE, PRNG));
 
         properties.setSystemPrecompiles(systemPrecompiles);
         properties.setEvmPrecompiles(evmPrecompiles);
@@ -142,28 +139,22 @@ class MirrorNodeEvmPropertiesTest extends Web3IntegrationTest {
         return Stream.of(
                 Arguments.of(1L, EVM_VERSION_30, Collections.EMPTY_LIST),
                 Arguments.of(500L, EVM_VERSION_30, Collections.EMPTY_LIST),
-                Arguments.of(800L, EVM_VERSION_30, List.of(HTS)),
-                Arguments.of(1099L, EVM_VERSION_30, List.of(HTS)),
-                Arguments.of(1100L, EVM_VERSION_30, List.of(HTS)),
-                Arguments.of(2000L, EVM_VERSION_34, List.of(HTS)),
-                Arguments.of(3000L, EVM_VERSION_38, Arrays.asList(HTS, ERC)),
-                Arguments.of(3100L, EVM_VERSION_38, Arrays.asList(HTS, ERC, EXCHANGE_RATE)),
-                Arguments.of(4000L, EVM_VERSION_38, Arrays.asList(HTS, ERC, EXCHANGE_RATE)),
-                Arguments.of(4100L, EVM_VERSION_38, Arrays.asList(HTS, ERC, EXCHANGE_RATE, PRNG)),
-                Arguments.of(5000L, EVM_VERSION_38, Arrays.asList(HTS, ERC, EXCHANGE_RATE, PRNG)));
+                Arguments.of(1099L, EVM_VERSION_30, Collections.EMPTY_LIST),
+                Arguments.of(1100L, EVM_VERSION_30, List.of(EXCHANGE_RATE)),
+                Arguments.of(1199L, EVM_VERSION_30, List.of(EXCHANGE_RATE)),
+                Arguments.of(1200L, EVM_VERSION_34, List.of(EXCHANGE_RATE, PRNG)),
+                Arguments.of(3100L, EVM_VERSION_38, Arrays.asList(EXCHANGE_RATE, PRNG)),
+                Arguments.of(4000L, EVM_VERSION_38, Arrays.asList(EXCHANGE_RATE, PRNG)),
+                Arguments.of(4100L, EVM_VERSION_38, Arrays.asList(EXCHANGE_RATE, PRNG)));
     }
 
     private static Stream<Arguments> evmWithPrecompilesProvider() {
         return Stream.of(
-                Arguments.of(EVM_VERSION_30, Set.of(HTS), EVM_VERSION_30 + "-" + HTS),
-                Arguments.of(EVM_VERSION_30, Set.of(ERC, HTS), EVM_VERSION_30 + "-" + HTS + "," + ERC),
+                Arguments.of(EVM_VERSION_30, Collections.EMPTY_SET, EVM_VERSION_30 + "-" + HTS_ERC),
                 Arguments.of(
-                        EVM_VERSION_30,
-                        Set.of(HTS, ERC, EXCHANGE_RATE),
-                        EVM_VERSION_30 + "-" + HTS + "," + ERC + "," + EXCHANGE_RATE),
-                Arguments.of(EVM_VERSION_30, Set.of(HTS, ERC, EXCHANGE_RATE, PRNG), EVM_VERSION_30),
-                Arguments.of(EVM_VERSION_34, Set.of(HTS), EVM_VERSION_34),
-                Arguments.of(EVM_VERSION_34, Set.of(HTS, ERC), EVM_VERSION_34),
-                Arguments.of(EVM_VERSION_38, Set.of(HTS, ERC, EXCHANGE_RATE), EVM_VERSION_38));
+                        EVM_VERSION_30, Set.of(EXCHANGE_RATE), EVM_VERSION_30 + "-" + HTS_ERC + "," + EXCHANGE_RATE),
+                Arguments.of(EVM_VERSION_30, Set.of(EXCHANGE_RATE, PRNG), EVM_VERSION_30),
+                Arguments.of(EVM_VERSION_34, Set.of(EXCHANGE_RATE, PRNG), EVM_VERSION_34),
+                Arguments.of(EVM_VERSION_38, Set.of(EXCHANGE_RATE, PRNG), EVM_VERSION_38));
     }
 }
